# PPSRawToDigi

./: .gitignore  .gitlab-ci.yml  .travis.yml  DiamondDigi.root  DiamondReco.root  Doxyfile  README.md  build.sh  config_9998.152127.py  diamond_digi_to_reco_test.py  diamondraw_data_chain_test.py  doxyFooter.html  doxyHeader.html  doxyStyle.css  raw_data_chain_test.py  raw_data_chain_test.reference_output  test.cfg  test.py  test.sh  test2.py  totem_standalone_raw_data_test.py
Alignment/RPDataFormats/: BuildFile.xml
Alignment/RPTrackBased/: BuildFile.xml
CondFormats/DataRecord/: BuildFile.xml
Configuration/TotemOpticsConfiguration/: BuildFile.xml
DQM/TotemRP/: BuildFile.xml
DataFormats/PPSDetId/: BuildFile.xml
DataFormats/T1Cluster/: BuildFile.xml
DataFormats/T1RecHit/: BuildFile.xml
DataFormats/T1Road/: BuildFile.xml
DataFormats/T1T2Track/: BuildFile.xml
DataFormats/T2Cluster/: BuildFile.xml
DataFormats/T2Digi/: BuildFile.xml
DataFormats/T2DigiVfat/: BuildFile.xml
DataFormats/T2Hit/: BuildFile.xml
DataFormats/T2Road/: BuildFile.xml
DataFormats/TotemL1Trigger/: BuildFile.xml
DataFormats/TotemRPL1/: BuildFile.xml
DataFormats/TotemRawData/: BuildFile.xml
Documentation/Totem/: doxygen.h
EventFilter/CTPPSRawToDigi/: BuildFile.xml
EventFilter/TotemRawToDigi/: BuildFile.xml
GeneratorInterface/CosmicRayInterface/: BuildFile.xml  INSTALLFROMCRMC.sh
Geometry/TotemGeometry/: BuildFile.xml
Geometry/TotemRPDetTopology/: BuildFile.xml
Geometry/TotemRPGeometryBuilder/: BuildFile.xml
Geometry/TotemRecords/: BuildFile.xml
Geometry/TotemT2AlignmentDataFormats/: BuildFile.xml
Geometry/VeryForwardGeometryBuilder/: BuildFile.xml
IOMC/Elegent/: interface
IOMC/Phojet/: BuildFile.xml
L1TriggerTotem/CoincidenceChip/: BuildFile.xml
SimG4CMS/PPS/: 1
TotemRawDataLibrary/: CMakeLists.txt  Doxyfile  FindCastor.cmake  FindGMock.cmake  FindLibXML2.cmake  FindROOT.cmake  FindXRootD.cmake  MainPage.dox  README.md  build.sh
TotemRawDataLibrary/DAQA/: README
TotemRawDataLibrary/DAQA/interface/: event_3_9.h  monitor.h
TotemRawDataLibrary/DAQA/test/: makefile  test.cc
TotemRawDataLibrary/DataFormats/interface/: ClusterizationVFATFrame.h  CommonDef.h  FramePosition.h  OldVFATFrame.h  OptoRxSupplementalData.h  OptoRxVFATFrameCollection.h  PositionedVFATFrame.h  PositionedVFATFrameCollection.h  Raw2DigiStatus.h  RawEvent.h  RawVFATFrame.h  SecondLevelTriggerVFATFrame.h  SimpleVFATFrameCollection.h  SlinkFrame.h  VFATFrame.h  VFATFrameCollection.h
TotemRawDataLibrary/DataFormats/src/: ClusterizationVFATFrame.cc  OldVFATFrame.cc  OptoRxVFATFrameCollection.cc  PositionedVFATFrameCollection.cc  RawVFATFrame.cc  SecondLevelTriggerVFATFrame.cc  SimpleVFATFrameCollection.cc  SlinkFrame.cc  VFATFrame.cc  classes.h  classes_def.xml
TotemRawDataLibrary/DataFormats/test/: ClusterizationVFATFrame.cc  OptoRxSupplementalData.cc  PositionedVFATFrameCollection.cc  PositionedVFATFrameCollectionMock.h  PositionedVFATFrameMock.h  RawVFATFrame.cc
TotemRawDataLibrary/RawToDigi/: BuildFile.xml
TotemRawDataLibrary/RawToDigi/.svn/: entries
TotemRawDataLibrary/RawToDigi/.svn/text-base/: BuildFile.xml.svn-base
TotemRawDataLibrary/RawToDigi/interface/: CounterChecker.h  RPDataCCProducer.h  RPDataDigiProducer.h  Raw2DigiProducer.h  T1FisChannel.h  T1XMLDataDigiProducer.h  T2DataDigiProducer.h  T2Mapping.h  T2TrigMap.h  T2XMLDataDigiProducer.h
TotemRawDataLibrary/RawToDigi/interface/.svn/: entries
TotemRawDataLibrary/RawToDigi/interface/.svn/text-base/: CounterChecker.h.svn-base  RPDataCCProducer.h.svn-base  RPDataDigiProducer.h.svn-base  Raw2DigiProducer.h.svn-base  T1Cfecs.h.svn-base  T1DeadChannelDataAnalyzer.h.svn-base  T1XMLDataDigiProducer.h.svn-base  T2DataDigiProducer.h.svn-base  T2Mapping.h.svn-base  T2XMLDataDigiProducer.h.svn-base
TotemRawDataLibrary/RawToDigi/plugins/: BuildFile.xml  Raw2DigiProducer.cc  Raw2DigiProducer.cc.old
TotemRawDataLibrary/RawToDigi/plugins/.svn/: entries
TotemRawDataLibrary/RawToDigi/plugins/.svn/text-base/: BuildFile.xml.svn-base  Raw2DigiProducer.cc.svn-base
TotemRawDataLibrary/RawToDigi/python/: ExampleReco.py  RPDataCCProducer_cfi.py  RPDataDigiProducer_cfi.py  T1+_dec2010.xml  T1-_dec2010.xml  T1_all_0.xml  T1_all_mon_0.xml  T2GeoMapIP5_4quarter_vmea_VFATsAlive_noTMC-14apr10.xml
TotemRawDataLibrary/RawToDigi/python/.svn/: dir-prop-base  entries
TotemRawDataLibrary/RawToDigi/src/: CounterChecker.cc  T2Mapping.cc
TotemRawDataLibrary/RawToDigi/src/.svn/: entries
TotemRawDataLibrary/RawToDigi/src/.svn/text-base/: CounterChecker.cc.svn-base  T2Mapping.cc.svn-base
TotemRawDataLibrary/RawToDigi/test/: Raw2DigiProducer_test2.py
TotemRawDataLibrary/RawToDigi/test/.svn/: entries
TotemRawDataLibrary/RawToDigi/test/.svn/text-base/: Raw2DigiProducer_test.py.svn-base
TotemRawDataLibrary/Readers/: BuildFile.xml
TotemRawDataLibrary/Readers/interface/: BaseVMEBFile.h  CircularBuffer.h  DataFile.h  DynamicOptoRxVMEBFile.h  LocalStorageFile.h  MultiSlinkFile.h  RFIOStorageFile.h  RawDataSource.h  SRSFile.h  SlinkFile.h  StorageFile.h  TTPFile.h  VME2File.h  VMEAFile.h  VMEAStream.h  VMEBFile.h  VMEFile.h  XRootStorageFile.h
TotemRawDataLibrary/Readers/plugins/: BuildFile.xml  EventDataDumper.cc  Event_hacked.h  RawDataDumper.cc  RawDataSource.cc
TotemRawDataLibrary/Readers/plugins/.svn/: entries
TotemRawDataLibrary/Readers/src/: BaseVMEBFile.cc  DataFile.cc  DynamicOptoRxVMEBFile.cc  LocalStorageFile.cc  MultiSlinkFile.cc  RFIOStorageFile.cc  SRSFile.cc  SlinkFile.cc  StorageFile.cc  TTPFile.cc  VME2File.cc  VMEAFile.cc  VMEAStream.cc  VMEBFile.cc  VMEFile.cc  XRootStorageFile.cc
TotemRawDataLibrary/Readers/test/: DynamicOptoRxVMEBFile.cc  Integration_DynamicOptoRxVMEBFile.cc  StorageFileTest.cc
TotemRawDataLibrary/Utilities/: BuildFile.xml  makefile.pre
TotemRawDataLibrary/Utilities/interface/: CablingAnalyzer.h  CommonDef.h  TestECProgress.h
TotemRawDataLibrary/Utilities/src/: CablingAnalyzer.cc  TestECProgress.cc
TotemRawDataLibrary/test/: config_9998.152127.py  test.py  test1.py  test2.py
(+2418 files in other folders)
